# desafio-stalse

./: README.md
backend/: .coverage  .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  ruff.toml  tickets.json  ty.toml
backend/app/: main.py
backend/app/metrics/: __init__.py
backend/app/metrics/router/: dependencies.py  router.py
backend/app/metrics/schema/: metrics_schema.py
backend/app/metrics/service/: metrics_service.py
backend/app/shared/api/: lifespan.py  middleware.py
backend/app/shared/db/: config.py
backend/app/shared/http_client/: client.py
backend/app/shared/log/: logger.py
backend/app/tickets/: __init__.py
backend/app/tickets/exceptions/: tickets_not_found.py
backend/app/tickets/model/: tickets_model.py
backend/app/tickets/repository/: tickets_repository.py
backend/app/tickets/router/: dependencies.py  router.py
backend/app/tickets/schema/: tickets_schema.py
backend/app/tickets/service/: tickets_service.py
backend/tests/: conftest.py
backend/tests/metrics/service/: tests_metrics_service.py
backend/tests/tickets/repository/: tests_tickets_repository.py
backend/tests/tickets/service/: tests_tickets_service.py
data/: etl.py  pyproject.toml  readme.md
data/processed/: metrics.json
frontend/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json  prettier.config.mjs  tsconfig.json
frontend/app/: layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/tickets/: page.tsx
n8n/: docker-compose.yml  readme.md  workflow.json
(+20 files in other folders)
